# Ambrosia-POS

./: Contributing.md  INSTALLATION.md  Makefile  OBJECTIVES_TABLE.md  PROPOSAL.md  Propuesta.md  README.md  SECURITY.md  Tabla-de-Objetivos.md  context-db.md  docker-compose.yml  generate-token.sh  install.sh
.github/: static.yml
.github/workflows/: ci.yml  client_linter.yml  client_unit_test.yml  e2e.yml  server_tests.yml  static.yml
client/: .babel-jest.config.js  .gitignore  Dockerfile  eslint.config.mjs  generate-env.cjs  jest.config.mjs  package-client.sh  package-lock.json  package.json  tsconfig.json
client-nextjs/: generate-env.js  package-lock.json  package.json
client-nextjs/src/: middleware.js
client-nextjs/src/app/: globals.css  layout.js  providers.jsx
client-nextjs/src/components/: ModuleNavigation.js  Tabs.js
client-nextjs/src/hooks/: useJwtAuth.js  useModules.js  useServices.js
client-nextjs/src/lib/: currencyUtils.js  getHomeRoute.js  homeRoutes.js  modules.js
client-nextjs/src/services/: apiClient.js  bitcoinPriceService.js
client/__tests__/: Home.test.jsx
client/__tests__/onboarding/: AddBusinessData.test.jsx  AddUserAccount.test.jsx  Onboarding.test.jsx  StepsSummary.test.jsx
client/public/: index.html
client/src/: App.css  App.js  config.js  middleware.js  output.css  proxy.js  useMockSocket.js
client/src/app/: globals.css  hero.ts  layout.js  page.js  page.js.bak  page.jsx  providers.jsx
client/src/components/: ConfirmationPopup.jsx  DynamicModuleRenderer.jsx  Headers.jsx  LoadingCard.jsx  ModuleNavigation.js  Onboarding.jsx  OnboardingWizard.jsx  PaginatedTable.jsx  VirtualKeyboard.js
client/src/contexts/: LoggerContext.js  MockSocketContext.js  UserRoleContext.js  cashierContext.js
client/src/core/: moduleRegistry.js
client/src/hooks/: useJwtAuth.js  useModules.js  useModules.jsx  usePermission.jsx
client/src/i18n/: I18nProvider.jsx
client/src/lib/: auth.js  formatDate.jsx  getHomeRoute.js  homeRoutes.js  loggerStore.js  modules.js
db/: .gitignore  ambrosia.db  db-schema.sql  dummy-data.sql
docs/api/: Auth.md  Users.md
electron/: main.js  package-lock.json  package.json
scripts/: ambrosia.sh  install-client.sh  install.sh  package-client.sh  phoenixd.sh  run-server.sh  uninstall.sh  verify.sh
scripts/windows/: install.ps1  installer.iss
server/: .gitignore  Dockerfile  kls_database.db  settings.gradle.kts
server/app/: build.gradle.kts
server/db/: ambrosia.db
server/e2e_tests_py/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
server/e2e_tests_py/ambrosia/: api_utils.py  auth_utils.py  http_client.py  test_utils.py
server/e2e_tests_py/ambrosia_tests/: __init__.py  test_server.py
server/e2e_tests_py/tests/: conftest.py  test_auth_e2e.py  test_routing_e2e.py
server/gradle/: libs.versions.toml
web/: docusaurus.config.js  package-lock.json  package.json
web-page/: docusaurus.config.js  package-lock.json  package.json
web/blog/: 2024-07-28-estado-proyecto-v0-8.md  2025-07-28-estado-proyecto.md  2025-09-08-npm-supply-chain-attack.md  authors.yml
web/team/: angel402.md  authors.yml  chekin.md  jordypirata.md
(+388 files in other folders)
