[project]
name = "ambrosia-pos-tests"
version = "0.1.0"
description = "API tests for Ambrosia POS server using pytest"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.3.0",
    "psutil>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ambrosia"]

[tool.pytest.ini_options]
minversion = "9.0"
strict = true
addopts = [
    "-ra",
    "--timeout=300",
    "-v"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

asyncio_mode = "auto"
timeout = 300

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

# Ruff handles both linting and formatting

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["ambrosia"]
